# numana

./: README.md  pyproject.toml
src/numana/: __init__.py  main.py  rootsolvers.py
src/numana.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
