[tool.poetry]
name = "numana"
version = "0.1.0"
description = "A library that consists of a loose collection of utilities I made for NUMANA class"
authors = ["MassiveAtoms <s.ramsaransing.w@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[tool.poetry.scripts]
numana = "numana.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
